--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,600" rel="stylesheet" type="text/css">
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
-    <link type="text/css" rel="stylesheet" href="style.css">
+    <link type="text/css" rel="stylesheet" href="./styles/style.css">
 
     <title>Pig Game</title>
 </head>
@@ -34,10 +34,10 @@
         <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
         <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
 
-        <img src="dice-5.png" alt="Dice" class="dice">
+        <img src="./images/dice-5.png" alt="Dice" class="dice">
     </div>
-    <script src="functions.js"></script>
-    <script src="app.js"></script>
+    <script src="./scripts/functions.js"></script>
+    <script src="./scripts/app.js"></script>
 </body>
 
 </html>
